--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,8 @@
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
+
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
